Refactor code a bit using requirejs

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -7,4 +7,4 @@ html
     h1 Mind the gap
     #game
     script(src="/js/libs.js")
-    script(src="/js/main.js")
+    script(data-main="/js/main.js", src="/js/require.js")
